k8s/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hello-world
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: hello-world
    spec:
      containers:
        - image: hello-world
          name: hello-world
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
