k8s/wait-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: wait
  name: wait
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wait
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: wait
    spec:
      containers:
        - env:
            - name: TARGETS
              value: hello-world:8080
            - name: TIMEOUT
              value: "2"
          image: waisbrot/wait
          name: wait
          resources: {}
      restartPolicy: Always
status: {}
